Adding Buttons to Html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         <input type="submit">
     </form>
 	
+	<br>
+    <button id="add_row">Add Row</button>
+    <button id="add_column">Add Column</button>
+    <br>
+	<button id="remove_row">Remove Row</button>
+    <button id="remove_column">Remove Column</button>
+    <br>
+	
     <h2>Pick A Color</h2>
     <input type="color" id="colorPicker">
 
