Adding Reset button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <button id="remove_column">Remove Column</button>
     <br>
 	
+	<button type="reset" id="reset">Reset</button>
+	<br>
+	
     <h2>Pick A Color</h2>
     <input type="color" id="colorPicker">
 
